update and fix some minor bwst theme layout issues, add bundessansweb font

--- a/src/components/details.scss
+++ b/src/components/details.scss
@@ -1,7 +1,11 @@
 @layer kol-theme-component {
+
+	:host{
+		font-family: var(--font-family);
+	}
+
 	details > summary {
 		border-radius: calc(var(--border-radius) / 2);
-		font-family: var(--font-family);
 	}
 
 	details > summary > span{
